button/drop-downs now clickable, fixed drop down spacing, compiler warnings resolved

--- a/src/index.css
+++ b/src/index.css
@@ -71,10 +71,14 @@ body {
     font-family: Helvetica, sans-serif;
     font-size: 18px;
     margin-bottom: 5px;
-    margin-top: 15px;
+    margin-top: 10px;
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.drop-down select:hover {
+    cursor: pointer;
 }
 
 .home button {
@@ -87,4 +91,8 @@ body {
     padding: 15px;
     margin-top: 20px;
     border-radius: 5px;
+}
+
+.home button:hover {
+    cursor: pointer;
 }
